[package]
name = "ping-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = { path = "/home/andrey/socket2", features = ["all"] }
# socket2 = { version = "0.5.8", features = ["all"] }
zerocopy = "0.8.14"
clap = { version = "4.5.26", features = ["derive"] }
clap_derive = "4.5.24"
libc = "0.2.169"
zerocopy-derive = "0.8.14"
rand = "0.8.5"
