[package]
name = "ping-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = { git = "https://github.com/rust-lang/socket2", features = ["all"] }
zerocopy = "0.8.14"
clap = { version = "4.5.26", features = ["derive"] }
clap_derive = "4.5.24"
libc = "0.2.169"
zerocopy-derive = "0.8.14"
rand = "0.8.5"
